<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/round_edit_text">


    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/tvTitle"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        android:fontFamily="@font/gotham_rounded_bold"
        tools:text="@string/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvTitle"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnEdit"
            android:text="@string/text_edit"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:background="@drawable/button_general"/>

        <Button
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnDelete"
            android:text="@string/text_delete"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:background="@drawable/button_general"/>

        <Button
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnPublish"
            android:text="@string/text_publish"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:background="@drawable/button_general"/>

        <Button
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnUnPublish"
            android:text="@string/text_unpublish"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:background="@drawable/button_general"/>

    </LinearLayout>
</RelativeLayout>