<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        layout="@layout/toolbar"/>


    <ScrollView
        android:layout_above="@+id/btnSubmit"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_user_name" />

            <sembako.sayunara.android.helper.CostumeEditText
                android:id="@+id/etUserName"
                style="@style/CustomEditText"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:maxLines="1"
                app:isRequired="true" />

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_email" />

            <sembako.sayunara.android.helper.CostumeEditText
                android:id="@+id/etEmail"
                style="@style/CustomEditText"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:maxLines="1"
                app:isRequired="true" />

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_phone_number" />

            <sembako.sayunara.android.helper.CostumeEditText
                android:id="@+id/etPhoneNumber"
                style="@style/CustomEditText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:maxLines="1"
                app:isRequired="true" />


            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_market_location" />

            <sembako.sayunara.android.helper.CostumeEditText
                android:id="@+id/etMarketLocation"
                style="@style/CustomEditText"
                android:clickable="false"
                android:focusable="false"
                android:drawableRight="@drawable/ic_expand_more_black_24dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:maxLines="1"
                app:isRequired="true" />

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_password" />

            <sembako.sayunara.android.helper.PasswordView
                android:background="@drawable/bg_edit_text_product"
                android:layout_marginRight="10dp"
                android:id="@+id/etPassword"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded" />

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_confirm_password" />

            <sembako.sayunara.android.helper.PasswordView
                android:background="@drawable/bg_edit_text_product"
                android:layout_marginRight="10dp"
                android:id="@+id/etConfirmPassword"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/text_register"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:textAllCaps="false"
        app:backgroundTint="@color/color_btn_disable"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</RelativeLayout>