<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,ObsoleteLayoutParam" />


        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_email" />

            <sembako.sayunara.android.helper.CostumeEditText
                android:id="@+id/etEmail"
                style="@style/CustomEditText"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:maxLines="1"
                app:isRequired="true" />

            <TextView
                style="@style/StyleTextViewPostProduct"
                android:text="@string/text_register_password" />

            <sembako.sayunara.android.helper.PasswordView
                android:background="@drawable/bg_edit_text_product"
                android:layout_marginRight="10dp"
                android:id="@+id/etPassword"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,RtlHardcoded" />


        </LinearLayout>


        <TextView
            android:visibility="gone"
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:lineSpacingExtra="2sp"
            android:text="@string/text_forgot_password"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/text_login"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorApp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />


        <TextView
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:lineSpacingExtra="2sp"
            android:text="@string/text_no_have_account" />

    </LinearLayout>

</RelativeLayout>