<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:tint="@color/white"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_login_first"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text_login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text_register"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>